# python-quay-tool

./: .gitignore  .gitreview  .zuul.yaml  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/: README.md  ansible.cfg
ansible/playbooks/: check-quay-tool.yml
ansible/roles/check_service/tasks/: check.yml  main.yml  prepare.yml  setup.yml
quaytool/: quaytool.py
