[metadata]
name = quaytool
summary = A tool for maintain Quay container image registry service
description-file =
    README.md
author = Software Factory Project
author-email = softwarefactory-dev@redhat.com
home-page = https://softwarefactory-project.io/
classifier =
    Environment :: Software Factory
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    quaytool

[entry_points]
console_scripts =
    quaytool = quaytool.quaytool:main
